# bellman-equation

./: .dockerignore  .gitignore  01_frozenlake_v_iteration.py  02_frozenlake_q_iteration.py  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-tests.yml
bellman_equation/: __init__.py  agent.py  cli.py  runner.py
tests/: test_agent.py
